--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -10,8 +10,9 @@ wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
 show-error-page-for-reject = true
 ipv6 = false
-disable-geoip-db-auto-update = true
+disable-geoip-db-auto-update = false
 exclude-simple-hostnames = true
+geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 [Replica]
 hide-apple-request = 1
