--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -21,13 +21,13 @@ hide-udp = 1
 keyword-filter-type = none
 
 [Proxy Group]
+PROXY = select, policy-path=node-list/, update-interval=-1
 StreamingSE = select, DIRECT, policy-path=node-list/, update-interval=-1，policy-regex-filter=HKG|TWN
 Netflix = select, policy-path=node-list/, update-interval=-1，policy-regex-filter=SGP
 Spotify = select, policy-path=node-list/, update-interval=-1，policy-regex-filter=HKG|TWN
 Telegram = select, PROXY, policy-path=node-list/, update-interval=-1，policy-regex-filter=SGP
-USA = select, policy-path=node-list/, update-interval=-1，policy-regex-filter=USA
 JPN = select, policy-path=node-list/, update-interval=-1，policy-regex-filter=JPN
-PROXY = select, policy-path=node-list/, update-interval=-1
+USA = select, policy-path=node-list/, update-interval=-1，policy-regex-filter=USA
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Unbreak.list,DIRECT
@@ -43,13 +43,13 @@ RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ru
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Surge/Google/Google.list,JPN
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Extra/PayPal.list,US
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Surge/Microsoft/Microsoft.list,US
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Ruleset/Global.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Ruleset/Global.list,US
 DOMAIN-SUFFIX,ip.skk.moe,PROXY
 DOMAIN-SUFFIX,ip.sb,PROXY
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Ruleset/China.list,DIRECT
 RULE-SET,LAN,DIRECT
 GEOIP,CN,DIRECT
-FINAL,PROXY,dns-failed
+FINAL,US,dns-failed
 
 [Host]
 *.xiaomi.com = server:119.29.29.29
