--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -1,7 +1,7 @@
 [General]
 wifi-assist = true
-proxy-test-url = http://cp.cloudflare.com/generate_204
-internet-test-url = http://wifi.vivo.com.cn/generate_204
+proxy-test-url = http://www.gstatic.com/generate_204
+internet-test-url = http://www.aliyun.com
 tls-provider = openssl
 allow-wifi-access = false
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.1,100.64.0.0/10,10.0.0.0/8,  localhost, *.local
