--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -1,5 +1,5 @@
 [general]
-server_check_url=http://cp.cloudflare.com/generate_204
+server_check_url=http://www.gstatic.com/generate_204
 resource_parser_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 ;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
 geo_location_checker= http://api.live.bilibili.com/ip_service/v1/ip_service/get_ip_addr?, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_bili_cn.js
