--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -13,6 +13,8 @@ ipv6 = false
 disable-geoip-db-auto-update = false
 exclude-simple-hostnames = true
 geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+http-api-tls = false
+http-api-web-dashboard = false
 
 [Replica]
 hide-apple-request = 0
@@ -22,22 +24,26 @@ keyword-filter-type = none
 
 [Proxy Group]
 PROXY = select, policy-path=***, update-interval=-1
-SG = select, PROXY, policy-path=***, update-interval=-1, policy-regex-filter=SGP
+JP = select, policy-path=***, update-interval=-1, policy-regex-filter=JPN
+US = select, policy-path=***, update-interval=-1, policy-regex-filter=USA
+SG = select, policy-path=***, update-interval=-1, policy-regex-filter=SGP
+TW = select, policy-path=***, update-interval=-1, policy-regex-filter=TWN
+HK = select, policy-path=***, update-interval=-1, policy-regex-filter=HKG
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/unbreak.list,DIRECT,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,JP,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,JP,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,SG,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,SG,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,JP,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,US,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list,JP,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list,DIRECT,update-interval=-1
 RULE-SET,LAN,DIRECT
 GEOIP,CN,DIRECT
-FINAL,PROXY,dns-failed
+FINAL,JP,dns-failed
 
 [Host]
 *.xiaomi.com = server:119.29.29.29
