--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -38,11 +38,6 @@ server=/*.mi.com/119.29.29.29
 server=/*.xiaomi.com/119.29.29.29
 
 [policy]
-static=JP, server-tag-regex=JP
-static=US, server-tag-regex=US
-static=SG, server-tag-regex=SG
-static=TW, server-tag-regex=TW
-static=HK, server-tag-regex=HK
 
 [server_local]
 
@@ -63,13 +58,13 @@ final, proxy
 [filter_remote]
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/unbreak.list, tag=Unbreak, force-policy=direct, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=JP, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=JP, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=SG, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list, tag=Telegram, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=JP, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list, tag=Microsoft, force-policy=US, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list, tag=Global, force-policy=JP, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list, tag=Microsoft, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list, tag=Global, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, update-interval=-1, opt-parser=true, enabled=true
 [rewrite_local]
 
