--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -24,26 +24,21 @@ keyword-filter-type = none
 
 [Proxy Group]
 PROXY = select, policy-path=***, update-interval=-1
-JP = select, policy-path=***, update-interval=-1, policy-regex-filter=JPN
-US = select, policy-path=***, update-interval=-1, policy-regex-filter=USA
-SG = select, policy-path=***, update-interval=-1, policy-regex-filter=SGP
-TW = select, policy-path=***, update-interval=-1, policy-regex-filter=TWN
-HK = select, policy-path=***, update-interval=-1, policy-regex-filter=HKG
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/unbreak.list,DIRECT,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,JP,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,JP,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,SG,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,JP,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,US,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list,JP,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list,DIRECT,update-interval=-1
 RULE-SET,LAN,DIRECT
 GEOIP,CN,DIRECT
-FINAL,JP,dns-failed
+FINAL,PROXY,dns-failed
 
 [Host]
 *.xiaomi.com = server:119.29.29.29
