--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -24,13 +24,14 @@ keyword-filter-type = none
 
 [Proxy Group]
 PROXY = select, policy-path=***, update-interval=-1
+Netflix = select, policy-path=***, update-interval=-1
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/unbreak.list,DIRECT,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,Netflix,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,PROXY,update-interval=-1
@@ -60,6 +61,10 @@ hdslb.com = server:119.29.29.29
 *.tmall.com = server:223.5.5.5
 *.taobao.com = server:223.5.5.5
 mtalk.google.com = 108.177.125.188
+
+[URL Rewrite]
+^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
+^https?:\/\/(ditu|maps).google\.cn https://maps.google.com 302
 
 [MITM]
 skip-server-cert-verify = true
