--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -38,11 +38,13 @@ server=/*.mi.com/119.29.29.29
 server=/*.xiaomi.com/119.29.29.29
 
 [policy]
+static=Netflix,server-tag-regex=SG
 
 [server_local]
 
 [server_remote]
 https, tag=Maying, update-interval=-1, opt-parser=false, enabled=true
+https, tag=Immtel, update-interval=-1, opt-parser=false, enabled=true
 
 [filter_local]
 host-suffix, local, direct
@@ -58,15 +60,18 @@ final, proxy
 [filter_remote]
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/unbreak.list, tag=Unbreak, force-policy=direct, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=Netflix, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list, tag=Telegram, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list, tag=Microsoft, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list, tag=Global, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, update-interval=-1, opt-parser=true, enabled=true
+
 [rewrite_local]
+^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
+^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
 [rewrite_remote]
 
