--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -5,7 +5,7 @@ internet-test-url = http://www.aliyun.com
 tls-provider = openssl
 allow-wifi-access = false
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.1,100.64.0.0/10,10.0.0.0/8,  localhost, *.local
-dns-server = 223.5.5.5, 119.29.29.29, 119.28.28.28, system
+dns-server = 223.5.5.5, 119.29.29.29, 119.28.28.28
 wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
 show-error-page-for-reject = true
@@ -25,12 +25,13 @@ keyword-filter-type = none
 [Proxy Group]
 PROXY = select, policy-path=***, update-interval=-1
 Netflix = select, policy-path=***, update-interval=-1
+Spotify = select, policy-path=***, update-interval=-1
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/unbreak.list,DIRECT,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,Netflix,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,Spotify,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,PROXY,update-interval=-1
