--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -29,6 +29,7 @@ Spotify = select, policy-path=***, update-interval=-1
 AppleMusic = select, policy-path=***, update-interval=-1
 
 [Rule]
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,Netflix,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,Spotify,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/applemusic.list,AppleMusic,update-interval=-1
