--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -55,6 +55,7 @@ geoip,cn,direct
 final, proxy
 
 [filter_remote]
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=Netflix, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=Spotify, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/applemusic.list, tag=AppleMusic, force-policy=AppleMusic, update-interval=-1, opt-parser=true, enabled=true
