--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -67,10 +67,9 @@ https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.l
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, update-interval=-1, opt-parser=true, enabled=true
 
 [rewrite_local]
-^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
-^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
 [rewrite_remote]
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/quantumultx/Rewrite.conf, tag=Rewrite, update-interval=-1, enabled=true
 
 [task_local]
 
