--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -34,14 +34,12 @@ server=/*.xiaomi.com/119.29.29.29
 
 [policy]
 static=Netflix,server-tag-regex=SG
-static=Spotify,server-tag-regex=HK
-static=AppleMusic,server-tag-regex=HK
 
 [server_local]
 
 [server_remote]
-https, tag=Maying, update-interval=-1, opt-parser=false, enabled=true
-https, tag=Immtel, update-interval=-1, opt-parser=false, enabled=true
+https, tag=Nexitally, update-interval=-1, opt-parser=false, enabled=true
+https, tag=DlerCloud, update-interval=-1, opt-parser=false, enabled=true
 
 [filter_local]
 host-suffix, local, direct
@@ -57,8 +55,8 @@ final, proxy
 [filter_remote]
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=Netflix, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=Spotify, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/applemusic.list, tag=AppleMusic, force-policy=AppleMusic, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/applemusic.list, tag=AppleMusic, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list, tag=Telegram, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
