--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -5,7 +5,7 @@ internet-test-url = http://www.aliyun.com
 tls-provider = openssl
 allow-wifi-access = false
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.1,100.64.0.0/10,10.0.0.0/8,  localhost, *.local
-dns-server = 223.5.5.5, 119.29.29.29, 119.28.28.28
+dns-server = 223.5.5.5, 119.29.29.29, system
 wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
 show-error-page-for-reject = true
