--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -5,11 +5,10 @@ geo_location_checker= http://api.live.bilibili.com/ip_service/v1/ip_service/get_
 excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 
 [dns]
-no-system
+;no-system
 no-ipv6
 server=223.5.5.5
 server=119.29.29.29
-server=119.28.28.28
 address=/mtalk.google.com/108.177.125.188
 server=/dl.google.com/119.29.29.29
 server=/dl.l.google.com/119.29.29.29
