--- a/quantumultx/Rewrite.conf
+++ b/quantumultx/Rewrite.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,issuecdn.baidupcs.com,newclient.map.baidu.com,act.vip.iqiyi.com,intl.iqiyi.com,api.gotokeep.com,r.inews.qq.com,news.ssp.qq.com
+hostname = www.google.cn,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,issuecdn.baidupcs.com,newclient.map.baidu.com,act.vip.iqiyi.com,intl.iqiyi.com,api.gotokeep.com,interface*.music.163.com,r.inews.qq.com,news.ssp.qq.com
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
@@ -78,6 +78,9 @@ hostname = www.google.cn,api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,issuecdn.ba
 ^https?:\/\/u\d\.iqiyipic\.com\/image\/[\w\/]+\/oad_ url reject
 # > Keep - api.gotokeep.com
 ^https?:\/\/api\.gotokeep\.com\/ads url reject
+# > NetEase CloudMusic - interface*.music.163.com
+^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/eapi\/ad\/ url reject
+^https?:\/\/interface(\d)?.music.163.com\/eapi\/ad\/ url reject
 # > Tencent Video
 ^https?:\/\/vv\.video\.qq\.com\/getvmind\? url reject
 ^https?:\/\/((25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\.){3}(25[0-5]|2[0-4]\d|1\d{2}|[1-9]?\d)\/[a-z.]+\.tc\.qq\.com\/[\w\W]+p20\d\.1\.mp4\? url reject
