--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -30,36 +30,18 @@ Netflix = select, policy-path=***, update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,Netflix,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/applemusic.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list,PROXY,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list,PROXY,update-interval=-1
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list,DIRECT,update-interval=-1
 RULE-SET,LAN,DIRECT
 GEOIP,CN,DIRECT
 FINAL,PROXY,dns-failed
 
 [Host]
-*.xiaomi.com = server:119.29.29.29
-*.mi.com = server:119.29.29.29
-*.netease.com = server:119.29.29.29
-*.127.net = server:119.29.29.29
-*.126.net = server:119.29.29.29
-*.126.com = server:119.29.29.29
-*.163.com = server:119.29.29.29
-hdslb.com = server:119.29.29.29
-*.bilibili.com = server:119.29.29.29
-*.weixin.com = server:119.28.28.28
-*.tencent.com = server:119.28.28.28
-*.qq.com = server:119.28.28.28
-*.jd.com = server:119.28.28.28
-*.aliyun.com = server:223.5.5.5
-*.alicdn.com = server:223.5.5.5
-*.alipay.com = server:223.5.5.5
-*.tmall.com = server:223.5.5.5
-*.taobao.com = server:223.5.5.5
 mtalk.google.com = 108.177.125.188
 
 [MITM]
