--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -10,26 +10,6 @@ no-ipv6
 server=223.5.5.5
 server=119.29.29.29
 address=/mtalk.google.com/108.177.125.188
-server=/dl.google.com/119.29.29.29
-server=/dl.l.google.com/119.29.29.29
-server=/*.taobao.com/223.5.5.5
-server=/*.tmall.com/223.5.5.5
-server=/*.alipay.com/223.5.5.5
-server=/*.alicdn.com/223.5.5.5
-server=/*.aliyun.com/223.5.5.5
-server=/*.jd.com/119.28.28.28
-server=/*.qq.com/119.28.28.28
-server=/*.tencent.com/119.28.28.28
-server=/*.weixin.com/119.28.28.28
-server=/*.bilibili.com/119.29.29.29
-server=/hdslb.com/119.29.29.29
-server=/*.163.com/119.29.29.29
-server=/*.126.com/119.29.29.29
-server=/*.126.net/119.29.29.29
-server=/*.127.net/119.29.29.29
-server=/*.netease.com/119.29.29.29
-server=/*.mi.com/119.29.29.29
-server=/*.xiaomi.com/119.29.29.29
 
 [policy]
 static=Netflix,server-tag-regex=SG
@@ -50,6 +30,7 @@ HOST,mqtt.zhihu.com,reject
 HOST,sugar.zhihu.com,reject
 HOST,appcloud2.in.zhihu.com,REJECT
 USER-AGENT,AVOS*,REJECT
+
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
 ip-cidr, 10.0.0.0/8, direct
@@ -64,12 +45,12 @@ final, proxy
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list, tag=Reject, force-policy=reject, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=Netflix, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/applemusic.list, tag=AppleMusic, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list, tag=Telegram, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list, tag=Microsoft, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list, tag=Global, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list, tag=Apple, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list, tag=China, force-policy=direct, update-interval=-1, opt-parser=true, enabled=true
 
 [rewrite_local]
@@ -77,7 +58,6 @@ https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.li
 [rewrite_remote]
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/quantumultx/Rewrite.conf, tag=Rewrite, update-interval=-1, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/quantumultx/Bilibili.conf, tag=Bilibili, update-interval=-1, enabled=true
-https://raw.githubusercontent.com/jmjiaaz/Profiles/main/quantumultx/Smzdm.conf, tag=Smzdm, update-interval=-1, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/quantumultx/Zhihu.conf, tag=Zhihu, update-interval=-1, enabled=true
 
 [task_local]
