--- a/quantumultx/Online.conf
+++ b/quantumultx/Online.conf
@@ -46,6 +46,7 @@ https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.l
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list, tag=Netflix, force-policy=Netflix, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list, tag=Spotify, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list, tag=YouTube, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/streaming_others.list, tag=Streaming, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list, tag=Telegram, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list, tag=Google, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list, tag=Microsoft, force-policy=proxy, update-interval=-1, opt-parser=true, enabled=true
