--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -28,17 +28,17 @@ keyword-filter-type = none
 PROXY = select, policy-path=***, update-interval=-1, no-alert=0, hidden=0
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/streaming_others.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list,PROXY,update-interval=-1
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list,DIRECT,update-interval=-1
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/streaming_others.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/telegram.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/google.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/microsoft.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/global.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/apple.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/china.list,DIRECT
 RULE-SET,LAN,DIRECT
 GEOIP,CN,DIRECT
 FINAL,PROXY,dns-failed
