--- a/Surge 4/Online.conf
+++ b/Surge 4/Online.conf
@@ -9,7 +9,7 @@ dns-server = 223.5.5.5, 119.29.29.29, system
 wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
 show-error-page-for-reject = true
-ipv6 = false
+ipv6 = true
 disable-geoip-db-auto-update = false
 exclude-simple-hostnames = true
 geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
@@ -26,10 +26,11 @@ keyword-filter-type = none
 
 [Proxy Group]
 PROXY = select, policy-path=***, update-interval=0, no-alert=0, hidden=0
+Netflix = select, policy-path=***, update-interval=0, no-alert=0, hidden=0
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/reject.list,REJECT
-RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/netflix.list,Netflix
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/spotify.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/youtube.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/jmjiaaz/Profiles/main/Surge%204/Rules/streaming_others.list,PROXY
